<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dimen_16"
    android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Subtitle2"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/privacy_policy_header"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/privacy_policy_update" />

            <TextView
                android:id="@+id/policy_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/agreeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16"
                android:text="@string/agree_continue"
                android:padding="@dimen/text_16"
                android:textSize="@dimen/text_16"
                android:textStyle="bold" />

        </LinearLayout>

</ScrollView>
