<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen_16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/popBackPE"
            android:layout_width="@dimen/dimen_24"
            android:layout_height="@dimen/dimen_24"
            android:layout_margin="@dimen/dimen_16"
            android:contentDescription="@string/pop_back_icon"
            android:src="@drawable/back"
            app:tint="?attr/colorOnSurface" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/edit_profile"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/dimen_24"
            android:layout_height="@dimen/dimen_24"
            android:layout_margin="@dimen/dimen_16" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/my_darker_grey" />

                <EditText
                    android:id="@+id/namePE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Name"
                    android:background="@android:color/transparent"
                    android:inputType="textPersonName"
                    android:paddingVertical="@dimen/dimen_8"
                    android:hint="@string/enter_your_full_name" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginVertical="@dimen/dimen_4"
                    android:background="@color/my_darker_grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textColor="@color/my_darker_grey" />

                <EditText
                    android:id="@+id/aboutPE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="About"
                    android:background="@android:color/transparent"
                    android:inputType="text"
                    android:paddingVertical="@dimen/dimen_8"
                    android:hint="@string/about_yourself" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginVertical="@dimen/dimen_4"
                    android:background="@color/my_darker_grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birth_date"
                    android:textColor="@color/my_darker_grey" />

                <TextView
                    android:id="@+id/dobPE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:paddingVertical="@dimen/dimen_8"
                    android:text="@string/_01_01_2020"
                    app:drawableEndCompat="@drawable/calender" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginVertical="@dimen/dimen_4"
                    android:background="@color/my_darker_grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textColor="@color/my_darker_grey" />

                    <EditText
                        android:id="@+id/locationPE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="Address"
                        android:hint="@string/lagos_ng"
                        android:background="@android:color/transparent"
                        android:inputType="textPostalAddress"
                        android:paddingVertical="@dimen/dimen_8" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/gender"
                        android:textColor="@color/my_darker_grey" />

                    <Spinner
                        android:id="@+id/genderSpinnerPE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/gender_options"
                        android:gravity="end"
                        android:padding="@dimen/dimen_8" />

                </LinearLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/saveButtonPE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_16"
                    android:text="@string/save"
                    android:textSize="@dimen/text_16"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBarPE"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="?attr/colorOnPrimary"
                    android:padding="4sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
