<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:gravity="center_horizontal"
            android:text="@string/password_reset"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8"
            android:gravity="center_horizontal"
            android:text="@string/you_will_receive_instructions_for_resetting_your_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8"
            app:boxCornerRadiusBottomEnd="@dimen/dimen_32"
            app:boxCornerRadiusBottomStart="@dimen/dimen_32"
            app:boxCornerRadiusTopEnd="@dimen/dimen_32"
            app:boxCornerRadiusTopStart="@dimen/dimen_32"
            app:boxStrokeWidth="@dimen/stroke_width"
            app:boxStrokeWidthFocused="@dimen/stroke_width"
            app:hintEnabled="false"
            app:queryBackground="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                app:queryBackground="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/resetPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/dimen_8"
            android:padding="@dimen/dimen_8"
            android:text="@string/submit"
            android:textColor="?colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circular_surface_background"
        android:elevation="2dp"
        android:padding="4sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
